일반 근태 52시간 로직 구현 및 오류 수정 근태 신청 및 계획 리스트에 익일/당일 추가

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <body class="login-page"> <!-- body에 고유 클래스 추가 -->
 <div class="login-container">
     <div class="login-box">
-        <img src="/images/logo.png" alt="GGM 로고" class="logo" />
+        <img src="/images/logo_login.png" alt="GGM 로고" class="logo" />
         <h1>ESS시스템</h1>
         <form action="/login" method="post">
             <input type="text" name="empCode" placeholder="ID" required />
