--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -73,7 +73,7 @@ main {
     /*position: fixed;*/
     top: 60px;
     left: 0;
-    width: 200px;
+    /*width: 200px;*/
     height: 100%;
     background-color: #2b2f33;
     box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
