--- a/src/main/resources/static/css/att.css
+++ b/src/main/resources/static/css/att.css
@@ -190,3 +190,10 @@ input[readonly]:focus {
     border-top: 2px solid #ccc;
     text-align: center;
 }
+
+.approved {
+    background-color: #f0f0f0; /* 연한 회색 배경 */
+    color: #888;               /* 글자 회색 */
+    pointer-events: none;      /* 클릭 등 모든 상호작용 차단 */
+    opacity: 0.7;              /* 선택 강조 감소 */
+}
