--- a/src/main/resources/templates/att/etc.html
+++ b/src/main/resources/templates/att/etc.html
@@ -22,7 +22,7 @@
         <form id="searchForm" th:action="@{/att/etc/search}" method="get" class="search-box">
             <label>근무일
                 <input type="date" name="workDate" id="workDate"
-                       th:value="${workDate}">
+                       th:value="${#temporals.format(workDate, 'yyyy-MM-dd')}">
 
             </label>
 
@@ -131,7 +131,8 @@
             </thead>
 
             <tbody id="tableBodyE">
-            <tr th:each="emp : ${empList}">
+            <tr th:each="emp : ${empList}"
+                th:classappend="${emp.status} == 'APPROVED' ? 'approved' : ''">
                 <td>
                     <input type="checkbox" class="rowCheck">
                     <input type="hidden" class="requestId" th:value="${emp.requestId}">
@@ -177,8 +178,14 @@
                         <option value="false" th:selected="${emp.isTodayRequest} == false">당일 신청</option>
                     </select>
                 </td>
-
-                <td th:text="${emp.status}"></td>
+                <td>
+                      <span th:switch="${emp.status}">
+                          <span th:case="'SAVED'">저장</span>
+                          <span th:case="'APPROVED'">승인</span>
+                          <span th:case="'REJECTED'">반려</span>
+                          <span th:case="'REQUESTED'">상신</span>
+                      </span>
+                </td>
                 <td th:text="${emp.applicant}"></td>
             </tr>
             </tbody>
